--- a/main.html
+++ b/main.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Sound Board</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<div id="buttons">
-	    <button class="btn" id="applause">Applause</button>
-	    <button class="btn" id="boo">Boo</button>
-	    <button class="btn" id="gasp">Gasp</button>
-	    <button class="btn" id="tada">Tada</button>
-	    <button class="btn" id="victory">Victory</button>
-	    <button class="btn" id="wrong">Wrong</button>
-	    <button class="btn stop" id="stop">Stop</button>
-	  </div>
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="buttons">
+    <button class="btn" id="applause">Applause</button>
+    <button class="btn" id="boo">Boo</button>
+    <button class="btn" id="gasp">Gasp</button>
+    <button class="btn" id="tada">Tada</button>
+    <button class="btn" id="victory">Victory</button>
+    <button class="btn" id="wrong">Wrong</button>
+    <button class="btn stop" id="stop">Stop</button>
+  </div>
 
+  <script src="script.js"></script>
 </body>
-
 </html>
